--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "browserify-fs": "^1.0.0",
         "lodash": "^4.17.19",
+        "node-polyfill-webpack-plugin": "^2.0.1",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
@@ -22,8 +24,12 @@
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-svelte": "^0.8.0",
+        "follow-redirects": "^1.15.2",
         "laravel-mix-svelte": "^0.5.0",
         "oauth-pkce": "^0.0.6",
         "svelte-routing": "^1.6.0"
+    },
+    "browser": {
+        "path": false
     }
 }
